bk_ida/gccida/c0/combine_givs_p
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_givs_p/src/loop.c:7649:22: error: unknown type name 'induction_1'
rtx  combine_givs_p( induction_1 *g1, induction_1 *g2) 
                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_givs_p/src/loop.c:7649:39: error: unknown type name 'induction_1'
rtx  combine_givs_p( induction_1 *g1, induction_1 *g2) 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_givs_p/src/loop.c:7666:24: error: use of undeclared identifier 'machine_mode'
&& memory_address_p( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)g2->mem), ret) ) 
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_givs_p/src/loop.c:7666:39: error: expected expression
&& memory_address_p( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)g2->mem), ret) ) 
                                      ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_givs_p/src/obj/loop.o] Error 1
